<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_design"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".NumberConvertor">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="75dp"
        android:gravity="center_horizontal"
        android:text="@string/txtHeading"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtDec"
                    style="@style/myEditTextStyle"
                    android:autofillHints=""
                    android:background="@drawable/viewdesign"
                    android:digits="0123456789"
                    android:drawableStart="@drawable/decimal_leftsysmbol"
                    android:drawableLeft="@drawable/decimal_leftsysmbol"
                    android:hint="@string/hint_Dec"
                    android:inputType="number"
                    android:paddingRight="42dp" />


                <ImageView
                    android:id="@+id/copyDecimal"
                    android:layout_width="42dp"
                    android:layout_height="35dp"
                    android:layout_alignEnd="@+id/edtDec"
                    android:layout_alignRight="@+id/edtDec"
                    android:layout_marginTop="27dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="11dp"
                    android:contentDescription="@string/copyDecimal"
                    android:src="@drawable/ic_copy" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtBin"
                    style="@style/myEditTextStyle"
                    android:background="@drawable/viewdesign"
                    android:digits="01"
                    android:drawableStart="@drawable/bin_leftsysmbol"
                    android:drawableLeft="@drawable/bin_leftsysmbol"
                    android:hint="@string/hint_bin"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:paddingEnd="50dp"
                    android:paddingRight="42dp" />

                <ImageView
                    android:id="@+id/copyBin"
                    android:layout_width="42dp"
                    android:layout_height="35dp"
                    android:layout_alignEnd="@+id/edtBin"
                    android:layout_alignRight="@+id/edtBin"
                    android:layout_marginTop="27dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="11dp"
                    android:contentDescription="@string/copyBin"
                    android:src="@drawable/ic_copy" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtOct"
                    style="@style/myEditTextStyle"
                    android:autofillHints=""
                    android:background="@drawable/viewdesign"
                    android:digits="01234567"
                    android:drawableStart="@drawable/oct_leftsysmbol"
                    android:drawableLeft="@drawable/oct_leftsysmbol"
                    android:hint="@string/hint_Oct"
                    android:inputType="number"
                    android:paddingRight="42dp" />

                <ImageView
                    android:id="@+id/copyOct"
                    android:layout_width="42dp"
                    android:layout_height="35dp"
                    android:layout_alignEnd="@+id/edtOct"
                    android:layout_alignRight="@+id/edtOct"
                    android:layout_marginTop="27dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="11dp"
                    android:contentDescription="@string/copyOct"
                    android:src="@drawable/ic_copy" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtHex"
                    style="@style/myEditTextStyle"
                    android:autofillHints=""
                    android:background="@drawable/viewdesign"
                    android:digits="0123456789ABCDEF"
                    android:drawableStart="@drawable/hex_leftsysmbol"
                    android:drawableLeft="@drawable/hex_leftsysmbol"
                    android:hint="@string/hint_Hex"
                    android:inputType="textCapCharacters"
                    android:paddingRight="42dp" />

                <ImageView
                    android:id="@+id/copyHex"
                    android:layout_width="42dp"
                    android:layout_height="35dp"
                    android:layout_alignEnd="@+id/edtHex"
                    android:layout_alignRight="@+id/edtHex"
                    android:layout_marginTop="27dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="11dp"
                    android:contentDescription="@string/copyHex"
                    android:src="@drawable/ic_copy" />

            </RelativeLayout>


            <Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_design"
                android:text="@string/txtButton"
                android:textColor="@android:color/white"
                android:textSize="24sp" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>

